[tool.poetry]
name = "ae_adapt"
version = "0.1.0"
description = ""
authors = ["Tilman Krokotsch"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
torch = "^1.9.0"
pandas = "^1.3.2"
plotnine = "^0.8.0"
matplotlib = "^3.4.3"
pytorch-lightning = "0.10.0"
mlflow = "^1.19.0"
umap-learn = "^0.5.1"
scikit-learn = "^0.24.2"
ray = "^1.5.2"
tabulate = "^0.8.9"
PyTorch-ProbGraph = "^0.0.1"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
