[tool.poetry]
name = "ae_adapt"
version = "0.1.0"
description = ""
authors = ["Tilman Krokotsch"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.11"
torch = "^1.9.0"
pandas = "^1.3.2"
plotnine = "^0.8.0"
matplotlib = "^3.4.3"
pytorch-lightning = "^1.4.5"
mlflow = "^1.19.0"
umap-learn = "^0.5.1"
ray = "^1.5.2"
tabulate = "^0.8.9"
PyTorch-ProbGraph = "^0.0.1"
rul_datasets = { path = "./rul-datasets", develop = true }

[tool.poetry.dev-dependencies]
black = {extras = ["d"], version = "^21.7b0"}
flake8 = "^3.9.2"
mypy = "^0.910"

[tool.mypy]
plugins = "numpy.typing.mypy_plugin"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
